// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculateDrivingButtonState test suite default state should return default state 1`] = `
Object {
  "color": "ORANGE",
  "drivingButtonStates": "READY",
  "seconds": 2,
}
`;

exports[`calculateDrivingButtonState test suite rest states should return DRIVE when READY 1`] = `
Object {
  "color": "GREEN",
  "drivingButtonStates": "DRIVE",
  "seconds": 2,
}
`;

exports[`calculateDrivingButtonState test suite rest states should return READY when DRIVE 1`] = `
Object {
  "color": "ORANGE",
  "drivingButtonStates": "READY",
  "seconds": 2,
}
`;

exports[`calculateDrivingButtonState test suite rest states should return READY when TURNED_OFF 1`] = `
Object {
  "color": "ORANGE",
  "drivingButtonStates": "READY",
  "seconds": 2,
}
`;
